<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/gradien"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="220dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/top_background" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="80dp"
        android:contentDescription="scroll tengah">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- LinearLayout for the CardView -->
            <LinearLayout
                android:layout_marginStart="20dp"
                android:orientation="horizontal"
                android:id="@+id/lnSatu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/exam_home" />
                <TextView
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="SELAMAT DATANG \nPESERTA UJIAN
                            \n
                            \n MA AL-BUSTAN"
                    android:layout_centerHorizontal="true"/>
            </LinearLayout>

            <!-- LinearLayout for the ScrollView content -->
            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/lnDua"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:textSize="20dp"
                            android:layout_gravity="center"
                            android:textColor="#000000"
                            android:id="@+id/textJudul"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/panduan"
                            android:layout_centerHorizontal="true"/>
                        <com.google.android.material.textfield.TextInputLayout
                            android:textColor="@color/teal_200"
                            android:visibility="gone"
                            android:layout_gravity="center_horizontal"
                            android:id="@+id/input_layout_address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="50dp">

                            <EditText
                                android:textColor="#000000"
                                android:id="@+id/input_address"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:hint="@string/hint_name"
                                android:maxLines="1"
                                android:singleLine="true" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:textColor="@android:color/white"
                            android:layout_gravity="center"
                            android:id="@+id/btn_lanjut"
                            android:background="@drawable/button_rounded"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="70dp"
                            android:text="@string/btn_lanjutkan" />

                        <!-- Menu options -->
                        <LinearLayout
                            android:gravity="center_horizontal"
                            android:orientation="horizontal"
                            android:id="@+id/layTiga"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp">

                            <!-- Menu 1 -->
                            <LinearLayout
                                android:gravity="center"
                                android:orientation="vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp">

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/cv_menu1"
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    app:cardCornerRadius="60dp">

                                    <ImageView
                                        android:layout_gravity="center"
                                        android:layout_width="30dp"
                                        android:layout_height="30dp"
                                        android:src="@drawable/star"
                                        android:contentDescription="@string/app_name" />
                                </androidx.cardview.widget.CardView>

                                <TextView
                                    android:textSize="10sp"
                                    android:textColor="@android:color/black"
                                    android:gravity="center"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:text="Rate App" />
                            </LinearLayout>

                            <!-- Menu 2 -->
                            <LinearLayout
                                android:gravity="center"
                                android:orientation="vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp">

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/cv_menu2"
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    app:cardCornerRadius="60dp">

                                    <ImageView
                                        android:layout_gravity="center"
                                        android:layout_width="30dp"
                                        android:layout_height="30dp"
                                        android:src="@drawable/share"
                                        android:contentDescription="@string/app_name" />
                                </androidx.cardview.widget.CardView>

                                <TextView
                                    android:textSize="10sp"
                                    android:textColor="@android:color/black"
                                    android:gravity="center"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:text="Bagi App" />
                            </LinearLayout>

                            <!-- Menu 3 -->
                            <LinearLayout
                                android:gravity="center"
                                android:orientation="vertical"
                                android:visibility="gone"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp">

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/cv_menu3"
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    app:cardCornerRadius="60dp">

                                    <ImageView
                                        android:layout_gravity="center"
                                        android:layout_width="30dp"
                                        android:layout_height="30dp"
                                        android:src="@drawable/book"
                                        android:contentDescription="@string/app_name" />
                                </androidx.cardview.widget.CardView>

                                <TextView
                                    android:textSize="10sp"
                                    android:textColor="@android:color/black"
                                    android:gravity="center"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:text="Panduan" />
                            </LinearLayout>

                            <!-- Menu 4 -->
                            <LinearLayout
                                android:gravity="center"
                                android:orientation="vertical"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp">

                                <androidx.cardview.widget.CardView
                                    android:id="@+id/cv_menu4"
                                    android:layout_width="60dp"
                                    android:layout_height="60dp"
                                    app:cardCornerRadius="60dp">

                                    <ImageView
                                        android:layout_gravity="center"
                                        android:layout_width="30dp"
                                        android:layout_height="30dp"
                                        android:src="@drawable/qrcode"
                                        android:contentDescription="@string/app_name" />
                                </androidx.cardview.widget.CardView>

                                <TextView
                                    android:textSize="10sp"
                                    android:textColor="@android:color/black"
                                    android:gravity="center"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_marginTop="5dp"
                                    android:text="QR Login" />
                            </LinearLayout>

                        </LinearLayout>
                        <!-- Banner Ads -->
                        <LinearLayout
                            android:orientation="vertical"
                            android:id="@+id/linearLayoutd9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="8dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginRight="8dp">
                            <RelativeLayout
                                android:gravity="center_horizontal"
                                android:orientation="vertical"
                                android:id="@+id/banner_container"
                                android:layout_width="match_parent"
                                android:layout_height="320dp"
                                android:layout_marginLeft="15dp"
                                android:layout_marginRight="15dp">
                                <com.google.android.gms.ads.AdView
                                    android:id="@+id/adView"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    app:adSize="MEDIUM_RECTANGLE"
                                    app:adUnitId="@string/admobBanner"/>
                            </RelativeLayout>
                        </LinearLayout>
                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="60dp"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>